# insurance-system-SDA-project

./: .gitignore  Final_class_diagram.drawio  Project Documentation.docx  README.md  cccc_cli_report.html  cccc_gui_report.html  classDiagram_v1_mermaid code.txt  parse_cccc.py  project description by instructor.txt  project_build_prompt.txt  project_build_prompt_fast.txt  project_build_prompt_high_grade.txt  sda_diagram_v1.drawio  usecase_v1.drawio  usecase_v1.txt
AutoInsuranceGUI/: App.h  main.cpp
AutoInsuranceGUI/common/: Utils.h
AutoInsuranceGUI/data/: claims.csv  customers.csv  inspections.csv  policies.csv  staff.csv  (+1 more)
AutoInsuranceSystem/: CMakeLists.txt  README.md  sfml_test.cpp
AutoInsuranceSystem/data/: claims.csv  customers.csv  inspections.csv  policies.csv  vehicles.csv
AutoInsuranceSystem/docs/: class_diagram.mmd  code_quality_report.md  design_rationale.md  use_case_diagram.mmd
AutoInsuranceSystem/include/common/: Utils.h
AutoInsuranceSystem/include/domain/: Claim.h  Customer.h  InspectionReport.h  InsurancePolicy.h  Staff.h  Vehicle.h  Workshop.h
AutoInsuranceSystem/include/services/: ClaimService.h  CustomerService.h  ReportService.h
AutoInsuranceSystem/include/ui/: InsuranceApp.h
AutoInsuranceSystem/src/: main.cpp
AutoInsuranceSystem/src/services/: ClaimService.cpp  CustomerService.cpp  ReportService.cpp
AutoInsuranceSystem/src/ui/: InsuranceApp.cpp
AutoInsuranceSystem/tests/: test_services.cpp
previous ones just for practice/: classDiagram_sda project final_business layer.txt  mermaid_clas_diagram.txt  sda_project1.docx
(+12 files in other folders)
